# sistema_bancario

./: .gitignore  CMakeLists.txt
include/: denominacionInvalidaException.h  entidadInexistenteException.h  enumeraciones.h  excepcionBase.h  excepciones.h  fechaInvalidaException.h  funciones_aux.h  manejadorExcepciones.h  saldoInsuficienteException.h  sistema_bancario.h  valorInvalidoException.h
include/entidades/: banco.h  plaza.h  saldo_bcr.h  transaccion.h  transportista.h
src/: denominacionInvalidaException.cpp  entidadExistenteException.cpp  excepcionBase.cpp  excepciones.cpp  fechaInvalidaException.cpp  funciones_aux.cpp  main.cpp  manejadorExcepciones.cpp  saldoInsuficienteException.cpp  sistema_bancario.cpp  valorInvalidoException.cpp
src/entidades/: banco.cpp  plaza.cpp  saldo_bcr.cpp  transaccion.cpp  transportista.cpp
